--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    @font-face {
+      font-family: 'Comfortaa';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url(/dashboard_ts/src/assets/font/Comfortaa-Regular.ttf) format('ttf');
+    }
+  }
